Bug 76179 - [Embedded Firebird] - no DbgTestSolarMutex function set warning
Summary: [Embedded Firebird] - no DbgTestSolarMutex function set warning
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-14 15:57 UTC by Alex Thurgood
Modified: 2014-03-24 14:46 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Thurgood 2014-03-14 15:57:55 UTC
FWIW, I see this in the console when testing embedded Firebird in my debug master build :

warn:legacy.osl:22546:1:connectivity/source/drivers/firebird/DatabaseMetaData.cxx:1447: Not implemented yet!
warn:tools.debug:22546:1:tools/source/debug/debug.cxx:1121: no DbgTestSolarMutex function set

How to reproduce :

Easy to reproduce on my system.
Start LO from terminal /instdir/...
Create an empty Firebird embedded db.
Add a table and/or data, e.g. by dragging and dropping from a Calc sheet.
Save, and close the Firebird ODB file. Look in the terminal
Comment 1 Alex Thurgood 2014-03-14 16:01:34 UTC
The last step, instead of closing the Firebird ODB window after saving, should be just close LO. It is the closure of the main LO app window that causes the message to appear in the console.

Alex
Comment 2 Stephan Bergmann 2014-03-14 16:04:12 UTC
(In reply to comment #0)
> Create an empty Firebird embedded db.

How?  My (implicitly --enable-firebird-sdbc) Linux master build under "File - New Database - Select database - Create a new database - Embedded Database:" only offers "HSQLDB Embedded,"
Comment 3 Terrence Enger 2014-03-14 16:20:19 UTC
(In reply to comment #2)
> (In reply to comment #0)
> > Create an empty Firebird embedded db.
> 
> How?

Firebird is still an experimental feature.  Enable it by:
    Tools > Options > LibreOfficeDev > Advanced >
    "Optional (unstable) options" > "Enable experimental features"
and restart LibreOffice.
Comment 4 Stephan Bergmann 2014-03-14 17:20:27 UTC
backtrace is

> #0  DbgFunc (nAction=15, pParam=0x0) at /home/sbergman/lo/core/tools/source/debug/debug.cxx:1121
> #1  0x00007ffff2e3d44c in DbgTestSolarMutex () at /home/sbergman/lo/core/include/tools/debug.hxx:286
> #2  0x00007ffff318e821 in OutputDevice::ImplReleaseGraphics (this=0x1262a40, bRelease=true) at /home/sbergman/lo/core/vcl/source/gdi/outdev.cxx:555
> #3  0x00007ffff34e58bd in Window::~Window (this=0x1262a40) at /home/sbergman/lo/core/vcl/source/window/window.cxx:4765
> #4  0x00007ffff3475644 in SystemWindow::~SystemWindow (this=0x1262a40) at /home/sbergman/lo/core/vcl/source/window/syswin.cxx:92
> #5  0x00007ffff350f1d0 in WorkWindow::~WorkWindow (this=0x1262a40) at /home/sbergman/lo/core/vcl/source/window/wrkwin.cxx:140
> #6  0x00007ffff350f1f9 in WorkWindow::~WorkWindow (this=0x1262a40) at /home/sbergman/lo/core/vcl/source/window/wrkwin.cxx:133
> #7  0x00007ffff2e42988 in DeInitVCL () at /home/sbergman/lo/core/vcl/source/app/svmain.cxx:451
> #8  0x00007ffff2e41c68 in ImplSVMain () at /home/sbergman/lo/core/vcl/source/app/svmain.cxx:177
> #9  0x00007ffff2e431fb in SVMain () at /home/sbergman/lo/core/vcl/source/app/svmain.cxx:190
> #10 0x00007ffff7ac52a1 in soffice_main () at /home/sbergman/lo/core/desktop/source/app/sofficemain.cxx:85
> #11 0x000000000040098d in sal_main () at /home/sbergman/lo/core/desktop/source/app/main.c:48
> #12 0x0000000000400967 in main (argc=1, argv=0x7fffffffe618) at /home/sbergman/lo/core/desktop/source/app/main.c:47
Comment 5 Commit Notification 2014-03-24 14:45:42 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=561539e2a6b2d95bdd372462034642fbf2c72f14

fdo#76179: deleting mpDefaultWin causes a DBG_TESTSOLARMUTEX



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.