fdo#76179: deleting mpDefaultWin causes a DBG_TESTSOLARMUTEX

...so deinit support for that only afterwards

Change-Id: I89b8014bd26aecd9da67eaddc4a8facc620bf16e